--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,23 +1,22 @@
 !!!
 %html
   %head
-    %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}/
+    %meta{ content: "text/html; charset=UTF-8", "http-equiv": "Content-Type" }
     %title App
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true
     = javascript_include_tag 'application', 'data-turbolinks-track': true
     = csrf_meta_tags
   %body
     %nav.navbar.navbar-static-top.navbar-inverse
       .container
-        %nav#navbar.collapse.navbar-collapse
-          %a.navbar-brand{href: "/"}
+        %nav.collapse.navbar-collapse#navbar
+          %a.navbar-brand{ href: "/" }
             Флэшкарточкер
           %ul.nav.navbar-nav.navbar-right
             %li
               = link_to "Все карточки", cards_path
             %li
-              %a{href: "#"}
+              %a{ href: "#" }
                 Добавить карточку
-                
     .container
       = yield
