--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,6 @@
             %li
               = link_to "Все карточки", cards_path
             %li
-              %a{ href: "#" }
-                Добавить карточку
+              = link_to "Добавить карточку", new_card_path
     .container
       = yield
