--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -1,6 +1,6 @@
-.row
+.row.cards
   - @cards.each do |card|
-    .col-sm-6.col-md-4
+    .col-sm-6.col-md-4.card
       .thumbnail
         .caption
           %h3
