--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.thumbnail.card {
+  padding: 15px 20px 20px 20px; 
+  
+  h2 {
+    margin-top: 0;
+    text-align: center;
+  }
+  .alert {
+    margin-bottom: 0;
+  }
+}
