--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,12 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .thumbnail.card {
-  padding: 15px 20px 20px 20px; 
+  padding: 15px 20px 20px;
   
   h2 {
     margin-top: 0;
     text-align: center;
   }
+  
   .alert {
     margin-bottom: 0;
   }
