--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,10 +1,10 @@
-- if !@card.blank?
+- unless @card.blank?
   .row
     .col-md-6.col-md-offset-3
       .thumbnail.card
         %h2
           = @card.original_text
-        = simple_form_for @card, url: "/check", method: "post"  do |f|
+        = simple_form_for @card, url: check_path, method: "post"  do |f|
           .form-group
             = f.input :original_text, as: :hidden
             = f.input :translated_text,
@@ -13,7 +13,7 @@
           .form-group
             = f.button :submit, value: "Проверить"
         - if flash[:notice] or flash[:error]
-          .alert{class: flash[:notice] ? "alert-success" : "alert-danger"}
+          .alert{ class: flash[:notice] ? "alert-success" : "alert-danger" }
             = flash[:notice]
             = flash[:error]
 - else
