--- a/app/views/cards/_form.haml
+++ b/app/views/cards/_form.haml
@@ -1,5 +1,11 @@
 = simple_form_for @card do |f|
   = f.input :original_text, label: "Слово"
   = f.input :translated_text, label: "Перевод"
-  = f.input :review_date, label: "Дата пересмотра", as: :date, html5: true, input_html: { value: (Time.zone.today + 3.days).strftime("%Y-%m-%d") }
+  = f.input :review_date,
+            label: "Дата пересмотра",
+            as: :date,
+            html5: true,
+            input_html: { 
+              value: (Time.zone.today + 3.days).strftime("%Y-%m-%d")
+            }
   = f.button :submit, value: @card.new_record? ? "Добавить" : "Сохранить"
