--- a/app/views/cards/_form.haml
+++ b/app/views/cards/_form.haml
@@ -1,9 +1,9 @@
 = simple_form_for @card do |f|
-  = f.input :original_text, label: "Слово"
-  = f.input :translated_text, label: "Перевод"
+  = f.input :original_text, label: "Word"
+  = f.input :translated_text, label: "Translation"
   = f.input :review_date,
-            label: "Дата пересмотра",
+            label: "Review Date",
             as: :date,
             html5: true,
             input_html: { value: (Time.zone.today + 3.days).strftime("%Y-%m-%d") }
-  = f.button :submit, value: @card.new_record? ? "Добавить" : "Сохранить"
+  = f.button :submit, value: @card.new_record? ? "Add" : "Update"
