--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -8,10 +8,10 @@
           .form-group
             = f.input :original_text, as: :hidden
             = f.input :translated_text,
-                      label: "Перевод",
+                      label: "Translation",
                       input_html: { value: ""}
           .form-group
-            = f.button :submit, value: "Проверить", class: "ac-check-submit"
+            = f.button :submit, value: "Check", class: "ac-check-submit"
         - if flash[:notice] or flash[:error]
           .alert{ class: flash[:notice] ? "alert-success" : "alert-danger" }
             = flash[:notice]
