--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -18,4 +18,4 @@
             = flash[:error]
 - else
   %h2
-    Нету доступных карточек, приходи позже.
+    You don't have enough words. Add them via "Add card"
