Add users controller, fix header layout

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,4 +1,6 @@
-%h2
-  New Card
-  
-= render partial: "form"
+.row
+  .col-md-6.col-md-offset-3
+    %h2
+      New Card
+      
+    = render partial: "form"
