--- a/app/views/cards/edit.html.haml
+++ b/app/views/cards/edit.html.haml
@@ -1,5 +1,7 @@
-%h2
-  Edit Card
-  
-= render partial: "form"
+.row
+  .col-md-6.col-md-offset-3
+    %h2
+      Edit Card
+      
+    = render partial: "form"
   
