--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,16 @@
   %body
     %nav.navbar.navbar-static-top.navbar-inverse
       .container
-        %nav.collapse.navbar-collapse#navbar
+        .navbar-header
+          %button.navbar-toggle.collapsed{ type: "button", data: { toggle: "collapse", target: "#navbar" }  }
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+
           %a.navbar-brand{ href: "/" }
             Flashcards
+            
+        %nav.collapse.navbar-collapse#navbar
           %ul.nav.navbar-nav.navbar-right
             %li
               = link_to "All cards", cards_path
