--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,10 +19,25 @@
             Flashcards
             
         %nav.collapse.navbar-collapse#navbar
+          - if current_user
+            %ul.nav.navbar-nav
+              %li
+                = link_to "All cards", cards_path
+              %li
+                = link_to "Add card", new_card_path
+            
+            
           %ul.nav.navbar-nav.navbar-right
-            %li
-              = link_to "All cards", cards_path
-            %li
-              = link_to "Add card", new_card_path
+            - if current_user
+              %li
+                = link_to "Log Out", log_out_path, method: :delete
+            
+            - else
+              %li
+                = link_to "Sign Up", sign_up_path
+              %li
+                = link_to "Log In", log_in_path
+                
+
     .container
       = yield
