--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,11 @@
           %ul.nav.navbar-nav.navbar-right
             - if current_user
               %li
+                %p.navbar-text
+                  = current_user.email
+              %li
+                = link_to "Settings", settings_path
+              %li
                 = link_to "Log Out", log_out_path, method: :delete
             
             - else
