--- a/app/views/users/settings.html.haml
+++ b/app/views/users/settings.html.haml
@@ -3,10 +3,11 @@
     %h2
       Settings
       
-    %h3
-      Email:
-      %strong
-        #{current_user.email}
+    - if current_user.email      
+      %h3
+        Email:
+        %strong
+          #{current_user.email}
         
     .btn-group
       = link_to "Change Email", edit_user_path(current_user, change: "email"), { class: "btn btn-default" }
