--- a/app/views/users/settings.html.haml
+++ b/app/views/users/settings.html.haml
@@ -10,5 +10,8 @@
           #{current_user.email}
         
     .btn-group
-      = link_to "Change Email", edit_user_path(current_user, change: "email"), { class: "btn btn-default" }
-      = link_to "Change Password", edit_user_path(current_user, change: "password"), { class: "btn btn-default" }
+      %a.btn.btn-default{ href: edit_user_path(current_user, change: "email")}
+        = current_user.email ? "Change Email" : "Set Email"
+        
+      %a.btn.btn-default{ href: edit_user_path(current_user, change: "password")}
+        = current_user.crypted_password ? "Change Password" : "Set Password"
