Images for cards, store images in the S3

--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -9,6 +9,8 @@
             %strong
               Translation:
             = card.translated_text
+          .card-image
+            = image_tag card.image.url(:medium)
           %p
             %strong
               Review Date:
