--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,14 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .thumbnail.card {
-  
+
   padding: 15px 20px 20px;
-  
+
   h2 {
     margin-top: 0;
     text-align: center;
   }
-  
+
   .alert {
     margin-bottom: 0;
   }
@@ -26,13 +26,25 @@
   height: 30px;
   width: 30px;
   background-size: 100% 100%;
-  
+
   &.is-facebook {
     background-image: image-url("facebook-logo.svg");
   }
-  
+
   &.is-twitter {
     margin-left: 10px;
     background-image: image-url("twitter-logo.svg");
   }
+}
+
+.card-image {
+  text-align: center;
+  height: 300px;
+  line-height: 300px;
+  margin-bottom: 10px;
+
+  img {
+    display: inline-block;
+  }
+
 }
