--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -39,11 +39,12 @@
 
 .card-image {
   text-align: center;
-  height: 300px;
-  line-height: 300px;
+  height: 360px;
+  line-height: 360px;
   margin-bottom: 10px;
 
   img {
+    width: 100%;
     display: inline-block;
   }
 
