Add Deck model, fix fonts

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -49,3 +49,16 @@
     display: inline-block;
   }
 }
+
+.grid {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.element {
+  align-self: stretch;
+}
+
+.row {
+  margin-bottom: 15px;
+}
