--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -1,6 +1,6 @@
-.row.cards
+.row.grid
   - @cards.each do |card|
-    .col-sm-6.col-md-4.card
+    .col-sm-6.col-md-4.element
       .thumbnail
         .caption
           %h3
