--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,6 +24,8 @@
               %li
                 = link_to "All cards", cards_path
               %li
+                = link_to "Decks", decks_path
+              %li
                 = link_to "Add card", new_card_path
 
 
