Tests for the win

--- a/app/views/decks/index.html.haml
+++ b/app/views/decks/index.html.haml
@@ -6,7 +6,7 @@
 
 .row.grid
   - @decks.each do |deck|
-    .col-sm-6.col-md-4.element
+    .col-sm-6.col-md-4.element.ac-deck
       .thumbnail
         .caption
           %h3
