--- a/app/views/cards/_form.haml
+++ b/app/views/cards/_form.haml
@@ -1,4 +1,4 @@
-= simple_form_for @card, url: cards_path do |f|
+= simple_form_for @card do |f|
   = f.input :original_text, label: "Word"
   = f.input :translated_text, label: "Translation"
   = f.input :deck, as: :select, collection: Deck.all, include_blank: false, label: "Deck"
