--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,3 +50,4 @@
     .container
       = render partial: "shared/flash_messages", flash: flash
       = yield
+      = render partial: "shared/footer"
