--- a/app/views/users/settings.html.haml
+++ b/app/views/users/settings.html.haml
@@ -9,10 +9,12 @@
         %strong
           #{current_user.email}
 
-    .btn-group
-      %a.btn.btn-default{ href: edit_user_path(current_user, change: "email") }
-        = current_user.email ? "Change Email" : "Set Email"
+    %h3
+      Language:
+      %strong
+        #{current_user.locale}
 
-      %a.btn.btn-default{ href: edit_user_path(current_user, change: "password") }
-        = current_user.crypted_password ? "Change Password" : "Set Password"
+    .btn-group
+      %a.btn.btn-default{ href: edit_user_path(current_user) }
+        Change Information
 
