--- a/app/views/user_mailer/reset_password_email.html.haml
+++ b/app/views/user_mailer/reset_password_email.html.haml
@@ -1,6 +1,6 @@
 %h3
-  You have requested to reset your password.
+  = t(".title")
 
 %p
-  To choose a new password, just follow this link:
+  = t(".text")
   = link_to @url, @url
