--- a/app/views/users/settings.html.haml
+++ b/app/views/users/settings.html.haml
@@ -1,20 +1,20 @@
 .row
   .container
     %h2
-      Settings
+      = t("settings")
 
     - if current_user.email
       %h3
-        Email:
+        #{ t("email") }:
         %strong
           #{current_user.email}
 
     %h3
-      Language:
+      #{ t("language") }:
       %strong
         #{current_user.locale}
 
     .btn-group
       %a.btn.btn-default{ href: edit_user_path(current_user) }
-        Change Information
+        = t("change_information")
 
