--- a/app/views/cards/_form.haml
+++ b/app/views/cards/_form.haml
@@ -1,12 +1,11 @@
 = simple_form_for @card do |f|
-  = f.input :original_text, label: "Word"
-  = f.input :translated_text, label: "Translation"
-  = f.input :deck, as: :select, collection: Deck.all, include_blank: false, label: "Deck"
+  = f.input :original_text
+  = f.input :translated_text
+  = f.input :deck, as: :select, collection: Deck.all, include_blank: false
 
   = f.input :image, as: :file, input_html: { accept: "image/*" }
   = f.input :review_date,
-            label: "Review Date",
             as: :date,
             html5: true,
             input_html: { value: (@card.new_record? ? Time.zone.today : @card.review_date).strftime("%Y-%m-%d") }
-  = f.button :submit, value: @card.new_record? ? "Add" : "Update"
+  = f.button :submit
