--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for current_user do |f|
-  = f.input :email, label: "Email", input_html: { value: current_user.email }
-  = f.input :password, label: "Password", required: true
-  = f.input :new_password, label: "New Password"
-  = f.input :locale, as: :select, collection: I18n.available_locales, include_blank: false, label: "Language"
-  = f.button :submit, value: "Change"
+  = f.input :email, input_html: { value: current_user.email }
+  = f.input :password, required: true
+  = f.input :new_password
+  = f.input :locale, as: :select, collection: I18n.available_locales, include_blank: false
+  = f.button :submit
