--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,13 +1,13 @@
 .row
   .col-md-6.col-md-offset-3
     %h2
-      Registration
+      = t("registration")
 
     = simple_form_for @user do |f|
-      = f.input :email, label: "Email"
-      = f.input :password, label: "Password"
+      = f.input :email
+      = f.input :password
       .text-center
-        = f.button :submit, value: "Sign up", class: "ac-signup-submit"
+        = f.button :submit, class: "ac-signup-submit"
 
     .login-button-wrapper
       %a.login-button.is-facebook{ href: auth_at_provider_path(provider: :facebook) }
