Add ru language, buttons to switch language
Polish

Polish

Polish

Polish

Polish locales

--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -7,7 +7,7 @@
             = card.original_text
           %p
             %strong
-              #{t("word")}:
+              #{t("translation")}:
             = card.translated_text
           .card-image
             = image_tag card.image.url(:medium)
