--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -15,4 +15,4 @@
             = f.button :submit, value: t("check"), class: "ac-check-submit"
 - else
   %h2
-    = t("cards.zero")
+    = t(".zero")
