--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,6 +41,15 @@
 
             - else
               %li
+                %a.dropdown-toggle{ data: { toggle: "dropdown" }, role: "button" }
+                  = t("language_list.description")
+                  %span.caret
+                %ul.dropdown-menu
+                  %li
+                    = link_to t("language_list.en"), url_for( locale: "en" )
+                  %li
+                    = link_to t("language_list.ru"), url_for( locale: "ru" )
+              %li
                 = link_to t("nav_sign_up"), sign_up_path
               %li
                 = link_to t("log_in"), log_in_path
