--- a/app/views/shared/_flash_messages.html.haml
+++ b/app/views/shared/_flash_messages.html.haml
@@ -1,4 +1,5 @@
-- flash.each do |type, message|
-  %div{ class: "alert fade in #{bootstrap_class_for(type)}" }
-    = simple_format(message)
+#flash-message
+  - flash.each do |type, message|
+    %div{ class: "alert fade in #{bootstrap_class_for(type)}" }
+      = simple_format(message)
 
